--- a/projects/templates/login.html
+++ b/projects/templates/login.html
@@ -1,65 +1,82 @@
-{% load static %}
+ 
+ {% load static %}
     {% include 'navbar.html' %}
-    <br><br><br><br>
-
-        <section class="page-section" id="about">
+ 
+ <br><br><br><br>
+ <section class="page-section" id="contact" dir="auto">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">درباره ما</h2>
-                    <h3 class="section-subheading text-muted">داستان ما رو بشنوید</h3>
+                    <h3 class="section-heading text-uppercase"  >وارد شوید</h3>
                 </div>
-                <ul class="timeline">
-                    <li>
-                  <img class="rounded-circle img-fluid" src="{% static 'images/mb.jpg' %}" alt="..." style="width:350px; height:350px; object-fit:cover;" />                        <div class="timeline-panel">
+                <br><br>
+                <!-- * * * * * * * * * * * * * * *-->
+                <!-- * * SB Forms Contact Form * *-->
+                <!-- * * * * * * * * * * * * * * *-->
+                <!-- This form is pre-integrated with SB Forms.-->
+                <!-- To make this form functional, sign up at-->
+                <!-- https://startbootstrap.com/solution/contact-forms-->
+                <!-- to get an API token!-->
+                <form  method="POST" action="{% url 'login' %}" >
+                    {% csrf_token %}
+                    <div class="row align-items-stretch mb-5">
+                        <div class="col-md-6">
+                            <div class="form-group" >
+                                <!-- Name input-->
+                                <input class="form-control"  type="text"  name="username" placeholder="نام کاربری *"  />
+                                <div class="invalid-feedback" data-sb-feedback="name:required"> نام کاربری را وارد کنید</div>
 
-                            <div class="timeline-heading">
-                                <h4></h4>
-                                <h4 class="subheading">شروع یادگیری1403</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">من زینب قدمیاری کارشناسی مهندسی نرم افزار در زمینه ی طراحی سایت با پایتون و جنگو فعالیت دارم</p></div>
-                        </div>
-                    </li>
-                    <ul class="timeline">
-                    <li>
-                  <img class="rounded-circle img-fluid" src="{% static 'images/nn.jpg' %}" alt="..." style="width:350px; height:350px; object-fit:cover;" />                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4></h4>
-                                <h4 class="subheading">مدرک معتبرIRQC</h4>
+                            <br>
+                            <div class="form-group">
+                                <!-- Email address input-->
+                                <input class="form-control" name="password" type="password"  placeholder="رمز *"/>
+                                <div class="invalid-feedback" data-sb-feedback="password:required">رمز را وارد کنید</div>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">  دوره آموزشی رو در آکادمی استاد محسن مدحج گذروندم یکی از بهترین دوره هایی با پشتیانی و بی نظیر</p></div>
                         </div>
-                    </li>
-                    <li>
-                  <img class="rounded-circle img-fluid" src="{% static 'images/mm.jpg' %}" alt="..." style="width:300px; height:300px; object-fit:cover;" />                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>2024</h4>
-                                <h4 class="subheading"></h4>
-                            </div>
-                            <div class="timeline-body"><p class="text-muted">  برنامه نویسی یکی از لذت بخش ترین کارایی که هر روزه انجام میدم</p></div>
-                        </div>
-                    </li>
-                    <li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..." /></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>July 2020</h4>
-                                <h4 class="subheading">Phase Two Expansion</h4>
-                            </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <h4>
-                                Be Part
-                                <br />
-                                Of Our
-                                <br />
-                                Story!
-                            </h4>
-                        </div>
-                    </li>
-                </ul>
+                    </div>
+                    
+                    <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
+                    <!-- Submit Button-->
+                    <div class="text-center"> <button type="submit" class="btn btn-primary btn-xl text-uppercase enabled"> ورود</button></div>
+                </form>
             </div>
         </section>
+        <!-- Footer-->
+        <footer class="footer py-4">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2023</div>
+                    <div class="col-lg-4 my-3 my-lg-0">
+                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                    <div class="col-lg-4 text-lg-end">
+                        <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
+                        <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- Portfolio Modals-->
+        <!-- Portfolio item 1 modal popup-->
+       
+        <!-- Portfolio item 2 modal popup-->
+           <!-- Portfolio item 3 modal popup-->
+       
+        <!-- Portfolio item 4 modal popup-->
+      
+                                    <!-- Project details-->
+                                   
+       
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="{%  static 'js/scripts.js' %}"></script>
+        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+        <!-- * *                               SB Forms JS                               * *-->
+        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
+        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+
+    </body>
