--- a/projects/templates/navbar.html
+++ b/projects/templates/navbar.html
@@ -44,6 +44,8 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">خروج</a></li>
                         {% else %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">ورود</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'singup' %}">ثبت نام </a></li>
+
                         {% endif %}
 
 
